# itmo-2023-parallel-algorithms

./: README.md
1_quicksort/: Makefile  README.md  main.cpp
2_bfs/: .gitignore  CMakeLists.txt  README.md  bfs_par.cpp  bfs_par.h  bfs_seq.cpp  bfs_seq.h  build.sh  cube_graph_generator.cpp  cube_graph_generator.h  install_deps.sh  main.cpp  run.sh  types.h
